# minisim

Solarcar/Aerobody/: Aerobody.cpp  CMakeLists.txt  VelocityVector.hpp
